# polynomial

./: AVL.h  CMakeLists.txt  OpenHash.h  README.md  Unordered.h
include/: TStack.h  Translator.h  Vector.h  list.h  polynomial.h
source/: CMakeLists.txt  Source.cpp
test/: CMakeLists.txt  test_polynomials.cpp
